fix TLA code block overflow

--- a/jekyll/_sass/custom/custom.scss
+++ b/jekyll/_sass/custom/custom.scss
@@ -20,4 +20,5 @@
 
 code.language-tla {
   display: block;
+  overflow: auto;
 }
